[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UI/GUI/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://src/UI/PixelTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/Assets/Sound/MenuSound/Button.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Assets/Sound/MenuSound/Music.wav" type="AudioStream" id=4]
[ext_resource path="res://src/UI/HUD/HUD_Counters/SpeedCounter/SpeedCounter.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/HUD/HUD_Counters/DamageCounter/DamageCounter.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/HUD/HUD_Counters/ShootSpeedCounter/ShootSpeedCounter.tscn" type="PackedScene" id=7]

[node name="PauseMenu" type="Control"]
offset_right = 1024.0
offset_bottom = 600.0
pivot_offset = Vector2( -329, -89 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.00784314, 0.168627, 0.698039 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -285.5
offset_right = 285.5
offset_bottom = 82.0

[node name="HUD" type="HBoxContainer" parent="CenterContainer2"]
offset_left = 26.0
offset_top = 22.0
offset_right = 544.0
offset_bottom = 59.0
theme_override_constants/separation = 100

[node name="SpeedCounter" parent="CenterContainer2/HUD" instance=ExtResource( 5 )]
offset_right = 81.0

[node name="ShootSpeedCounter" parent="CenterContainer2/HUD" instance=ExtResource( 7 )]
offset_left = 181.0
offset_right = 325.0

[node name="DamageCounter" parent="CenterContainer2/HUD" instance=ExtResource( 6 )]
offset_left = 425.0
offset_right = 518.0

[node name="CenterContainer" type="CenterContainer" parent="."]
process_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
offset_left = 362.0
offset_top = 160.0
offset_right = 662.0
offset_bottom = 439.0
custom_minimum_size = Vector2( 300, 180 )
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/Menu"]
offset_right = 300.0
offset_bottom = 37.0
text = "Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/Menu"]
offset_top = 47.0
offset_right = 300.0
offset_bottom = 47.0
pivot_offset = Vector2( -659, -126 )

[node name="HighScoreCounter" type="Label" parent="CenterContainer/Menu"]
visible = false
offset_top = 57.0
offset_right = 300.0
offset_bottom = 94.0
grow_horizontal = 2

[node name="Control2" type="Control" parent="CenterContainer/Menu"]
offset_top = 57.0
offset_right = 300.0
offset_bottom = 57.0
pivot_offset = Vector2( -659, -126 )

[node name="ResumeBtn" type="Button" parent="CenterContainer/Menu"]
offset_top = 67.0
offset_right = 300.0
offset_bottom = 131.0
custom_minimum_size = Vector2( 300, 64 )
text = "Resume Game"

[node name="TryBtn" type="Button" parent="CenterContainer/Menu"]
offset_top = 141.0
offset_right = 300.0
offset_bottom = 205.0
custom_minimum_size = Vector2( 300, 64 )
text = "Try Again"

[node name="QuitBtn" type="Button" parent="CenterContainer/Menu"]
offset_top = 215.0
offset_right = 300.0
offset_bottom = 279.0
custom_minimum_size = Vector2( 300, 64 )
text = "Quit"

[node name="ButtonTap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="CenterContainer/Menu/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/TryBtn" to="." method="_on_TryBtn_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
